--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -448,7 +448,31 @@
     "### **3. ANALIZA LOS DATOS:**\n",
     "- **Histograma:** ¿Qué forma tienen?\n",
     "- **Rango:** ¿Cuáles son los límites?\n",
-    "- **Contexto:** ¿De dónde vienen los datos?"
+    "- **Contexto:** ¿De dónde vienen los datos?\n",
+    "\n",
+    "Explicación sencilla del análisis de datos\n",
+    "Histograma: ¿qué mirar?\n",
+    "\n",
+    "Si el histograma tiene forma de campana (pico en el centro, simétrico) → normal.\n",
+    "\n",
+    "Si el histograma es plano dentro de un rango (sin picos) → uniforme.\n",
+    "\n",
+    "Si el histograma muestra barras discretas separadas (p. ej. conteos) → binomial o discreta.\n",
+    "\n",
+    "Rango: ¿cuáles son los límites?\n",
+    "\n",
+    "Fíjate en el mínimo y máximo reales. Si hay límites naturales (por ejemplo, entre 0 y 1 o entre 9:00 y 9:30), es raro usar una normal sin truncarla.\n",
+    "\n",
+    "Si solo conoces que está entre A y B y no tienes más info → uniforme es una opción sencilla.\n",
+    "Contexto: ¿de dónde vienen los datos?\n",
+    "\n",
+    "Si estás contando “éxitos” (sí/no) en ensayos repetidos → binomial.\n",
+    "\n",
+    "Si mides algo que resulta de muchas causas pequeñas → normal.\n",
+    "\n",
+    "Si el proceso es “azar puro” dentro de un intervalo (o fase aleatoria dentro de un ciclo) → uniforme.\n",
+    "\n",
+    "Pregúntate: ¿hay una razón física/social para que exista un pico (una moda)? ¿o todo es igual dentro del rango?"
    ]
   },
   {
@@ -545,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
